// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RemoveIsolate /> should render with [show=false] 1`] = `
<RemoveModal
  name="Foo"
  noun="Isolate"
  onConfirm={[Function]}
  onHide={[MockFunction]}
  show={false}
/>
`;

exports[`<RemoveIsolate /> should render with [show=true] 1`] = `
<RemoveModal
  name="Foo"
  noun="Isolate"
  onConfirm={[Function]}
  onHide={[MockFunction]}
  show={true}
/>
`;
